new background image, white text, grey navbar

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">nicholas walker mattise</div>
-                <div class="intro-lead-in" style=""><small>Developer | Researcher | Tinkerer</small></div>
+                <div class="intro-lead-in" style=""><small>developer | researcher | tinkerer</small></div>
                 <a href="#skills" class="page-scroll btn btn-xl">more about me</a>
             </div>
         </div>
