--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <meta name="author" content="">
 
     <title>Nicholas W. Mattise</title>
-
+    <meta name="theme-color" content="#455cdb">
+    <link rel="manifest" href="manifest.json">
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -78,7 +79,8 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">nicholas walker mattise</div>
-                <div class="intro-lead-in" style=""><small>developer | researcher | tinkerer</small></div>
+                <div class="intro-lead-in" style=""><small>developer | researcher | tinkerer</small>
+                </div>
                 <a href="#skills" class="page-scroll btn btn-xl">more about me</a>
             </div>
         </div>
@@ -548,7 +550,22 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="js/agency.js"></script>
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
+        ga('create', 'UA-56944430-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 </body>
 
 </html>
