--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,20 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 		<title>Nick W Mattise</title>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=G-TVZHGSVDSY"
+		></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag("js", new Date());
+
+			gtag("config", "G-TVZHGSVDSY");
+		</script>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
@@ -35,6 +49,6 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-	</body>
+    --></body>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
 </html>
